cmake_minimum_required(VERSION 3.24)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorithm graph/bj1260.cpp graph/bj2178.cpp graph/bj2606.cpp graph/bj2667.cpp graph/bj7576.cpp graph/bj1697.cpp graph/bj11724.cpp graph/bj14502.cpp graph/bj1753.cpp)

add_executable(bj1260 graph/bj1260.cpp)
add_executable(bj2178 graph/bj2178.cpp)
add_executable(bj2606 graph/bj2606.cpp)
add_executable(bj2667 graph/bj2667.cpp)
add_executable(bj7576 graph/bj7576.cpp)
add_executable(bj1697 graph/bj1697.cpp)
add_executable(bj11724 graph/bj11724.cpp)
add_executable(bj14502 graph/bj14502.cpp)
add_executable(bj1753 graph/bj1753.cpp)
add_executable(graph_bj1753 graph/bj1753.cpp)